fix:membuat AUTH JWT
