# backend/app/Http/Middleware/Authenticate.php
@@ -12,6 +12,12 @@ class Authenticate extends Middleware
      */
     protected function redirectTo(Request $request): ?string
     {
-        return $request->expectsJson() ? null : route('login');
+         if ($request->expectsJson() || $request->is('api/*')) {
+            abort(response()->json([
+                'message' => 'Silakan login dulu.'
+            ], 401));
+        }
+
+        return route('login');
     }
 }
